# Financial-Advisor-Assistant

./: .gitignore  README.md
modules/dataset_wrangling/: .env.example  README.md  download_news_and_push_to_qdrant.sh  pyproject.toml
modules/dataset_wrangling/bash_scripts/: download_news_and_push_to_qdrant.sh  range_download_news_push_to_qdrant.sh
modules/dataset_wrangling/data/: examples.json  training_data.json  training_data_with_reasoning.json
modules/dataset_wrangling/scripts/: download_news_from_alpaca.py  embed_news_into_qdrant.py  generate_training_data.py
modules/dataset_wrangling/src/: alpaca_api.py  data_gen.py  dspy_datagen.py  news_documents.py  paths.py  utils.py  vector_db_api.py
